# ai-stock-analyst

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 264145147e86_chat_summary_eviction_cursor.py  80ad439a5932_fts_gin_index_on_document_chunks.py  86ba8cdd8e97_llm_calls_cached_tokens.py  8b3d21a7ca92_chat_sessions_summary_for_compression.py  b3074aa5c807_demo_sessions_and_llm_calls.py  c953934595fd_document_chunks_table_for_rag.py  faff5d463169_create_initial_tables.py
backend/app/: main.py
backend/app/core/: cache.py  config.py  database.py  demo_session.py  errors.py  llm_switch.py  logging.py
backend/app/models/: __init__.py  base.py  chat.py  document_chunk.py  holding.py  llm_call.py  market_data_cache.py  report.py  setting.py  stock_note.py  watchlist_item.py
backend/app/modules/admin/: router.py  schemas.py
backend/app/modules/ai/: context.py  llm_client.py  prompt_builder.py  (+4 more)
backend/eval/: __init__.py  baseline.json  cases.json  citation_cases.json  citation_check.py  corpus.py  poisoned_cases.json  run.py  scoring.py
backend/tests/: conftest.py  test_agent_loop.py  test_agent_tools.py  test_ai.py  test_chat.py  test_chat_compression.py  test_citation_check.py  test_config.py  test_database.py  test_demo.py  test_embeddings.py  test_errors.py  test_eval_scoring.py  test_financials.py  test_health.py  test_holdings.py  test_llm_gateway.py  test_logging.py  test_market_data.py  test_news.py  test_rag_chunking.py  test_rag_citations.py  test_rag_ingest.py  test_rag_retrieval.py  test_rag_sanitize.py  test_watchlist.py
(+117 files in other folders)
