[project]
name = "ai-stock-analyst-backend"
version = "0.1.0"
description = "FastAPI backend for AI Stock Analyst"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
