[project]
name = "ai-stock-analyst-backend"
version = "0.1.0"
description = "FastAPI backend for AI Stock Analyst"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.115.0",
    "openai>=2.44.0",
    "pgvector>=0.5.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "rank-bm25>=0.2.2",
    "sqlalchemy>=2.0.0",
    "trafilatura>=2.1.0",
    "uvicorn[standard]>=0.30.0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
# Applied migrations are generated + frozen; formatting must not touch them.
extend-exclude = ["alembic/versions"]
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Measure coverage on every run (reported, not gated — see roadmap Phase 10).
addopts = "--cov=app --cov-report=term-missing"
